survey-planning-tool/envs/prod-rds/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: spt
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: api
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/name: api
    spec:
      containers:
        - image: 831535125571.dkr.ecr.ap-southeast-2.amazonaws.com/ausseabed-prod-sct-api:954488205fcd02481050d68ac6a37e7cdf837a63
          imagePullPolicy: Always
          name: api
          resources: {}
      restartPolicy: Always
      imagePullSecrets:
        - name: regcred
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: api
  name: api
  namespace: spt
spec:
  ports:
   - port: 3000
     targetPort: 3000
  type: NodePort
  selector:
    app.kubernetes.io/name: api
