survey-planning-tool/envs/prod-rds/mapserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mapserver
  namespace: spt
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: mapserver
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/name: mapserver
    spec:
      containers:
        - image: 831535125571.dkr.ecr.ap-southeast-2.amazonaws.com/ausseabed-prod-sct-mapserver:a683065264e71405ba56306ca1c3364bf7a0d474
          imagePullPolicy: Always
          name: mapserver
          resources: {}
      restartPolicy: Always
      imagePullSecrets:
        - name: regcred
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: mapserver
  name: mapserver
  namespace: spt
spec:
  ports:
   - port: 80
     targetPort: 80
  selector:
    app.kubernetes.io/name: mapserver
